# sdk-go/api/oas_parameters_gen.go
@@ -977,6 +977,72 @@ func decodeDownloadRawEmailParams(args [1]string, argsEscaped bool, r *http.Requ
 	return params, nil
 }
 
+// GetConversationParams is parameters of getConversation operation.
+type GetConversationParams struct {
+	// Resource UUID.
+	ID uuid.UUID
+}
+
+func unpackGetConversationParams(packed middleware.Parameters) (params GetConversationParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "id",
+			In:   "path",
+		}
+		params.ID = packed[key].(uuid.UUID)
+	}
+	return params
+}
+
+func decodeGetConversationParams(args [1]string, argsEscaped bool, r *http.Request) (params GetConversationParams, _ error) {
+	// Decode path: id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToUUID(val)
+				if err != nil {
+					return err
+				}
+
+				params.ID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // GetEmailParams is parameters of getEmail operation.
 type GetEmailParams struct {
 	// Resource UUID.
